src/main/java/application/testData/invalidRandomAddresses/hard/completedIncorrectly/todo/RandomAddressesWithThreeWrongRandomFields.java
package application.testData.invalidRandomAddresses.hard.completedIncorrectly.todo;

public class RandomAddressesWithThreeWrongRandomFields {
}
